# TimeAccumulator

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: fileSystem.cpp  fileSystem.h  intermediateSystem.cpp  intermediateSystem.h  language.cpp  language.h  liveApplication.cpp  liveApplication.h  main.cpp  mainSystem.cpp  mainSystem.h
